:hammer: Changed base code and get ready for release

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,12 @@
       "@config/*": ["src/config/*"],
       "@core/*": ["src/core/*"]
     }
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    // "plop",
+    "logs",
+    "test"
+  ]
 }
